--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
+    "date-fns": "^1.29.0",
     "express": "^4.16.3",
+    "nodemailer": "^4.6.8",
     "redis": "^2.8.0"
   }
 }
