--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "body-parser": "^1.18.3",
     "date-fns": "^1.29.0",
     "express": "^4.16.3",
-    "nodemailer": "^4.6.8",
+    "node-telegram-bot-api": "^0.30.0",
     "redis": "^2.8.0"
   }
 }
