--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ build/Release
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 dump.rdb
+/parse_contact.js
